2019-03-07 Magnus Hagdorn
 * start piccolo3 client using aiocoap